Created win11 native build using jpackage added pane, css, readme, dark and light icons, better exception handling